Refactor account summary to use User object
- Replace individual user fields with a User object in AccountSummary
- Update AccountSummaryResponse to reflect changes in user data structure
- Modify integration tests to validate new user structure in responses